sre-challenge/kubernetes-deployment/registry-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: private-registry
  namespace: default
spec:
  selector:
    app: private-registry
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  externalIPs:
    - 192.168.32.193
